--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
   </head>
   <body>
     <a-scene renderer="antialias: false" stats>
-      <a-entity position="0 1.6 -2.0" animation="property: rotation; to: 0 360 0; dur: 10000; easing: linear; loop: true">
-        <a-sphere position="0 0 0.5" radius="0.5" color="#EF2D5E"></a-sphere>
-        <a-sphere position="0 0 -0.5" radius="0.5" color="#EF2D5E"></a-sphere>
-      </a-entity>
       <a-entity gaussian_splatting="src: https://huggingface.co/NikV09/SplaTAM_S1/resolve/main/SplaTAM_S2_scaled.splat;" rotation="0 0 0" position="0 1.5 -2"></a-entity>
-      <a-sky color="#000"></a-sky>
+      <a-sky color="#FFFFFF"></a-sky>
     </a-scene>
   </body>
 </html>
