--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <a-scene renderer="antialias: false" stats>
-      <a-entity camera look-controls="enabled: false" orbit-controls="target: 0 2 0; minDistance: -10000; initialPosition: 0 0 0; rotateSpeed: 0.5"></a-entity>
+      <a-entity camera look-controls="enabled: true" orbit-controls="target: 0 2 0; minDistance: -10000; initialPosition: 0 0 0; rotateSpeed: 0.5"></a-entity>
       <a-entity gaussian_splatting="src: https://huggingface.co/NikV09/SplaTAM_S1/resolve/main/SplaTAM_S2_scaled.splat;" rotation="0 0 0" position="0 1.5 -2"></a-entity>
       <a-sky color="#FFFFFF"></a-sky>
     </a-scene>
