--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
   <head>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://quadjr.github.io/aframe-gaussian-splatting/index.js"></script>
-    <script src="https://unpkg.com/aframe-orbit-controls@1.3.2/dist/aframe-orbit-controls.min.js"></script>
-    <script src="https://quadjr.github.io/aframe-gaussian-splatting/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.2.0/dist/aframe-extras.min.js"></script>
   </head>
   <body>
     <a-scene renderer="antialias: false" stats>
-      <a-entity camera look-controls="enabled: true" orbit-controls="target: 0 2 0; minDistance: -10000; initialPosition: 0 0 0; rotateSpeed: 0.5"></a-entity>
+      <a-entity id="rig"
+          movement-controls="controls: keyboard,gamepad,nipple; speed: 2; fly: true"
+          nipple-controls="mode: static; lookJoystickPosition: left; moveJoystickPosition: right">
+        <a-entity camera position="0 1.6 0" look-controls="enabled: true"></a-entity>
+      </a-entity>
       <a-entity gaussian_splatting="src: https://huggingface.co/NikV09/SplaTAM_S1/resolve/main/SplaTAM_S2_scaled.splat;" rotation="0 0 0" position="0 1.5 -2"></a-entity>
-      <a-sky color="#FFFFFF"></a-sky>
+      <a-sky color="#000"></a-sky>
     </a-scene>
   </body>
 </html>
